2003-04-01  John Levon  <levon@movementarian.org>

	* libdb/Makefile.am: fix make dist

	* daemon/opd_cookie.h: add SPARC syscall number.
	  The system call function is OK for sparc/sparc64

2003-03-31  Will Cohen  <wcohen@redhat.com>

	* libdb/odb_hash.h: Renamed db_hash.h.

	* dae/Makefile.am:
	* dae/opd_image.c:
	* dae/opd_image.h:
	* dae/opd_proc.c:
	* dae/opd_sample_files.c:
	* daemon/Makefile.am:
	* daemon/opd_image.c:
	* daemon/opd_image.h:
	* daemon/opd_sample_files.c:
	* libabi/Makefile.am:
	* libabi/abi.cpp:
	* libabi/abi_test.cpp:
	* libabi/op_import.cpp:
	* libdb/Makefile.am:
	* libdb/db_debug.c:
	* libdb/db_hash.h:
	* libdb/db_insert.c:
	* libdb/db_manage.c:
	* libdb/db_stat.c:
	* libdb/db_test.c:
	* libdb/db_travel.c:
	* pp/Makefile.am:
	* pp/counter_profile.cpp:
	* pp/counter_profile.h:
	* pp/op_merge.cpp: Change names to avoid libdb.a name conflicts.
	
2003-03-30  John Levon  <levon@movementarian.org>

	* configure.in: bump to 0.6cvs

	* doc/oprofile.xml: fix id. Add java etc. mention

	* utils/Makefile.am:
	* utils/op_start:
	* utils/op_start_25:
	* utils/op_stop:
	* utils/op_stop_25:
	* utils/op_dump:
	* utils/op_dump_25:
	* utils/op_session: finally remove the back compat crap

	* HACKING: add release-notes policy

2003-03-30  John Levon  <levon@movementarian.org>

	* configure.in: bump to 0.5.2

2003-03-30  John Levon  <levon@movementarian.org>

	* Makefile.am: remove op_arch.h for ia64

2003-03-27  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml: several more examples and fixes

2003-03-26  John Levon  <levon@movementarian.org>

	From a patch by Bryan Rittmeyer.

	* module/oprofile.c:
	* module/oprofile.h: push "irq_enabled" test
	into arch code, don't pass struct pt_regs.

	* module/x86/op_arch.h: cleanups

	* module/x86/op_model_athlon.c:
	* module/x86/op_model_ppro.c:
	* module/x86/op_model_p4.c:
	* module/x86/op_rtc.c: changes from above

	* module/ia64/op_arch.h: remove
	* module/ia64/op_pmu.c: change from above
